apps/arr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: arr
  namespace: arr
  labels:
    app: arr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: arr
  template:
    metadata:
      labels:
        app: arr
    spec:
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:5.2.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: webui
              containerPort: 8080
              protocol: TCP
            # - name: torrent
            #   containerPort: 6881
            #   protocol: TCP
            # - name: torrent-udp
            #   containerPort: 6881
            #   protocol: UDP
          volumeMounts:
            - name: qbittorrent-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
        - name: nzbget
          image: lscr.io/linuxserver/nzbget:26.3.20260925
          imagePullPolicy: IfNotPresent
          ports:
            - name: nzbget
              containerPort: 6789
              protocol: TCP
          volumeMounts:
            - name: nzbget-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.6.5
          imagePullPolicy: IfNotPresent
          ports:
            - name: prowlarr
              containerPort: 9696
              protocol: TCP
          volumeMounts:
            - name: prowlarr-config
              mountPath: /config
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
        - name: sonarr
          image: ghcr.io/linuxserver/sonarr:4.0.20
          imagePullPolicy: IfNotPresent
          ports:
            - name: sonarr
              containerPort: 8989
              protocol: TCP
          volumeMounts:
            - name: sonarr-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: tv-shows
              mountPath: /tv
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
        - name: radarr
          image: lscr.io/linuxserver/radarr:6.4.4
          imagePullPolicy: IfNotPresent
          ports:
            - name: radarr
              containerPort: 7878
              protocol: TCP
          volumeMounts:
            - name: radarr-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: movies
              mountPath: /movies
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
        - name: lidarr
          image: lscr.io/linuxserver/lidarr:3.1.0
          imagePullPolicy: IfNotPresent
          ports:
            - name: lidarr
              containerPort: 8686
              protocol: TCP
          volumeMounts:
            - name: lidarr-config
              mountPath: /config
            - name: downloads
              mountPath: /downloads
            - name: music
              mountPath: /music
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:1.6.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: bazarr
              containerPort: 6767
              protocol: TCP
          volumeMounts:
            - name: bazarr-config
              mountPath: /config
            - name: tv-shows
              mountPath: /tv
            - name: movies
              mountPath: /movies
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.5.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: flaresolverr
              containerPort: 8191
              protocol: TCP
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "1Gi"
      volumes:
        - name: qbittorrent-config
          persistentVolumeClaim:
            claimName: qbittorrent-config-pvc
        - name: nzbget-config
          persistentVolumeClaim:
            claimName: nzbget-config-pvc
        - name: downloads
          hostPath:
            path: "/mnt/data/downloads"
            type: Directory
        - name: prowlarr-config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
        - name: sonarr-config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
        - name: radarr-config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
        - name: lidarr-config
          persistentVolumeClaim:
            claimName: lidarr-config-pvc
        - name: bazarr-config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: tv-shows
          hostPath:
            path: "/mnt/data/media/tvshows"
            type: Directory
        - name: movies
          hostPath:
            path: "/mnt/data/media/movies"
            type: Directory
        - name: music
          hostPath:
            path: "/mnt/data/media/music"
            type: Directory
