apps/arr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arr
  namespace: arr
  labels:
    app: arr
spec:
  selector:
    app: arr
  ports:
    - name: qbittorrent
      protocol: TCP
      port: 8080
      targetPort: webui
    - name: prowlarr
      protocol: TCP
      port: 9696
      targetPort: prowlarr
    - name: sonarr
      protocol: TCP
      port: 8989
      targetPort: sonarr
    - name: radarr
      protocol: TCP
      port: 7878
      targetPort: radarr
  type: ClusterIP
