apps/arr/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: arr
  namespace: arr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`qbittorrent`)
      services:
        - name: arr
          port: 8080
    - kind: Rule
      match: Host(`nzbget`)
      services:
        - name: arr
          port: 6789
    - kind: Rule
      match: Host(`prowlarr`)
      services:
        - name: arr
          port: 9696
    - kind: Rule
      match: Host(`sonarr`)
      services:
        - name: arr
          port: 8989
    - kind: Rule
      match: Host(`radarr`)
      services:
        - name: arr
          port: 7878
    - kind: Rule
      match: Host(`lidarr`)
      services:
        - name: arr
          port: 8686
    - kind: Rule
      match: Host(`bazarr`)
      services:
        - name: arr
          port: 6767
    - kind: Rule
      match: Host(`jellyseerr`)
      services:
        - name: arr
          port: 5055
  tls:
    secretName: arr-tls
